[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["Abramov Viacheslav <aslava@mail.ru>"]
readme = "README.md"
packages = [{include = "youtube_analytics_project"}]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.93.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
